--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "chartist": "^0.11.0",
     "vue": "^2.6.10",
     "vue-clickaway": "2.2.2",
+    "vue-flag-icon": "^1.0.6",
     "vue-github-buttons": "3.0.1",
+    "vue-i18n": "^8.11.2",
     "vue-material": "1.0.0-beta-8",
     "vue-notifyjs": "^0.3.0",
     "vue-router": "3.0.2"
